2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/launch/parse.py (Component.complete_and_verify):
	Update for change to ConfigEntryComponent.

	* flumotion/common/config.py (ConfigEntryComponent._buildConfig)
	(ConfigEntryComponent.__init__, BaseConfigParser.parseComponent):
	Parse "project" attributes on components, and add them to the
	config dict.

	* flumotion/test/test_config.py
	(TestConfig.testParseComponentWithProject): Add a test for parsing
	<component> entries with project=foo.

	* flumotion/component/bouncers/ipbouncer.xml: Fix the xml.

	* flumotion/common/fxml.py (Parser.parseTextNode): Move here from
	config.py, and document. Accept CDATA_SECTION_NODE nodes.
	(Parser.parseTextNode): Raise self.parserError, not ConfigError.

	* flumotion/manager/manager.py
	(Vishnu.loadManagerConfigurationXML): Untested fix.

2007-05-22  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_component.py:
	  Fix parser error test, stop skipping it.

2007-05-22  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/Makefile.am.
	* flumotion/component/bouncers/ipbouncer.xml: 
	* flumotion/component/bouncers/ipbouncer.py: Add a bouncer to
	authenticate based on remote IP address. Shouldn't currently be
	used because we currently take address to be whatever the remote
	side set it to be; need to sanitize in remote_login in pb.py.
	See #167.

	* flumotion/common/config.py (parsePropertyValue): Reintroduce
	some old Py2.3 compat code.

2007-05-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py
	  (SingleBasicWatchdog.eaterSetInactive,
	  SingleBasicWatchdog.eaterSetActive, AVBasicWatchdog.eaterSetInactive,
	  AVBasicWatchdog.eaterSetActive):
	* flumotion/component/combiners/switch/switch.py (SwitchMedium,
	  SwitchMedium.remote_switchToMaster,
	  SwitchMedium.remote_switchToBackup, Switch.switch_to,
	  Switch.is_active, SingleSwitch.switch_to, AVSwitch.init,